# sse-gateway

./: .dockerignore  .env.local.example  .gitignore  API.md  Cargo.toml  Dockerfile  Makefile  README.md  cloudbuild.yaml  cloudrun-service.yaml  config.yaml  deploy-cloudrun.sh  deploy-gce-mig.sh  deploy.sh  entrypoint.sh  stress_test.py  test.html
crates/sse-gateway/: Cargo.toml  README.md
crates/sse-gateway-gcp/: Cargo.toml  README.md
crates/sse-gateway-gcp/src/: lib.rs
crates/sse-gateway-redis/: Cargo.toml  README.md
crates/sse-gateway-redis/src/: lib.rs  pubsub.rs  storage.rs
crates/sse-gateway/src/: auth.rs  connection.rs  dashboard.html  error.rs  event.rs  gateway.rs  handler.rs  lib.rs  manager.rs  source.rs  storage.rs
crates/sse-gateway/tests/: unit_tests.rs
examples/: auth.rs  benchmark.rs  channel_source.rs  custom_source.rs  direct_push_source.rs  simple.rs  webhook_source.rs
scripts/: bench_remote.py  cloudrun.sh  common.sh  gce-startup.sh  gce.sh
src/: config.rs  main.rs  message_store.rs  pubsub.rs  sse_handler.rs  test_handler.rs
src/gateway/: mod.rs  state.rs
src/sse/: connection.rs  event.rs  manager.rs  mod.rs
