[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
description = "SSE gateway with Google Cloud Pub/Sub"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# Connection management
dashmap = "6.0"

# Google Cloud Pub/Sub
google-cloud-pubsub = "0.30.0"
redis = { version = "1.0.3", features = ["tokio-rustls-comp", "tls-rustls-webpki-roots", "connection-manager"] }

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
