[package]
name = "sse-gateway-gcp"
description = "Google Cloud Pub/Sub adapter for SSE Gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["sse", "gcp", "pubsub", "google-cloud"]
categories = ["web-programming", "asynchronous"]

[dependencies]
sse-gateway = { workspace = true }
google-cloud-pubsub = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
